--- a/public/css/partials/_admin.scss
+++ b/public/css/partials/_admin.scss
@@ -18,11 +18,74 @@
     flex-direction: column;
     width: 50%;
     margin: auto;
-    @media(max-width: 500px){
+    div{
+        position: relative;
+        display: flex;
+        @media(max-width:500px){
+            flex-direction: column;
+        }
+        div{
+            background-color:#f25;
+            color: white;
+            flex: 1;
+            height: 50px;
+        }
+        input{
+            flex: 1;
+            padding: 2px;
+            margin: 2px;
+            height: 50px;
+        }
+        #check-img{
+            position: absolute;
+            right: 100%;
+            bottom: 7px;
+            width: 90px;
+            padding: 0;
+            @media(max-width: 500px){
+                display: none;
+            }
+        }
+    }
+    @media(max-width: 800px){
+        width: 80%;
+    }
+    @media(max-width:500px){
         width: 100%;
     }
     *{
-        margin: 5px;
-        padding: 10px;
+        margin: 2px;
+        padding: 5px;
+    }
+}
+
+.half-modal{
+    top: 50vh;
+
+}
+
+.msg-modal{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    height: 35vh;
+    width: 35vw;
+    min-width: 300px;
+    background-color:#ffffff;
+    transform: translate(-50%,-50%);
+    display: flex;
+    align-items: center;
+    @media(max-width:500px){
+        min-width: 260px;
+    }
+    div{
+        width: 100%;
+        height: 30%;
+        color:#f25;
+        font-size: 400;
+        font-size: 35px;
+        text-align: center;
+        transform: translateY(-50%);
+
     }
 }
