--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1143,6 +1143,60 @@
   margin: auto;
 }
 
+.book-panel div {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 500px) {
+  .book-panel div {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.book-panel div div {
+  background-color: #f25;
+  color: white;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 50px;
+}
+
+.book-panel div input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 2px;
+  margin: 2px;
+  height: 50px;
+}
+
+.book-panel div #check-img {
+  position: absolute;
+  right: 100%;
+  bottom: 7px;
+  width: 90px;
+  padding: 0;
+}
+
+@media (max-width: 500px) {
+  .book-panel div #check-img {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .book-panel {
+    width: 80%;
+  }
+}
+
 @media (max-width: 500px) {
   .book-panel {
     width: 100%;
@@ -1150,8 +1204,47 @@
 }
 
 .book-panel * {
-  margin: 5px;
-  padding: 10px;
+  margin: 2px;
+  padding: 5px;
+}
+
+.half-modal {
+  top: 50vh;
+}
+
+.msg-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height: 35vh;
+  width: 35vw;
+  min-width: 300px;
+  background-color: #ffffff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 500px) {
+  .msg-modal {
+    min-width: 260px;
+  }
+}
+
+.msg-modal div {
+  width: 100%;
+  height: 30%;
+  color: #f25;
+  font-size: 400;
+  font-size: 35px;
+  text-align: center;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .display-none {
